--- a/simon.html
+++ b/simon.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
     </footer>
 
 
-    <script src="app2.js"></script>
+    <script src="app.js"></script>
 
 </body>
 
